# krabcake-vg

./: .gitignore  KRABCAKE_DEVELOPERS.md  Makefile.all.am  Makefile.am  configure.ac
.githooks/: pre-commit
.github/workflows/: ci.yaml
coregrind/: m_signals.c
coregrind/m_aspacemgr/: aspacemgr-common.c
coregrind/m_initimg/: initimg-linux.c
krabcake/: Makefile.am  kc_errors.c  kc_include.h  kc_main.c  kc_translate.c  krabcake.h
krabcake/rs_hello/: Cargo.toml
krabcake/rs_hello/src/: data.rs  lib.rs  libc_stuff.rs  vex_ir.rs
